--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,33 +29,11 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Prepare gh-pages worktree
+      - name: Deploy
         run: |
           git fetch origin
-          if ! git show-ref --verify --quiet refs/heads/gh-pages; then
-            git checkout --orphan gh-pages
-            rm -rf .
-            git commit --allow-empty -m "Initialize gh-pages"
-            git push origin gh-pages
-            git checkout - 
-          fi
-          git worktree add --force gh-pages gh-pages
-          rm -rf gh-pages/*
-
-      - name: Copy build to gh-pages
-        run: |
-          cp -r dist/* gh-pages/
+          git checkout --orphan gh-pages-tmp
+          git --work-tree dist add --all
+          git --work-tree dist commit -m "Deploy"
+          git push origin HEAD:gh-pages --force
           echo '148.studio' > gh-pages/CNAME
-
-      - name: Commit and push
-        run: |
-          cd gh-pages
-          if [ -z "$(git status --porcelain)" ]; then
-            echo "No changes to deploy."
-            exit 0
-          fi
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A
-          git commit -m "Deploy $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-          git push origin gh-pages
